--- a/MengaJavier-Desafio11 - copia/views/partials/login.ejs
+++ b/MengaJavier-Desafio11 - copia/views/partials/login.ejs
@@ -1,7 +1,7 @@
-<div class="border border-dark bg-secondary bg-gradient" id="loginDiv">
-    <h3 class="text-center ">Login</h3>
-    <form action="/products" method="post" class="p-1">
-        <div class="mb-3" id="loginDiv">
+<div class="border border-dark bg-secondary bg-gradient d-flex flex-row" id="loginDiv">
+    <h3 class="text-center">Login</h3>
+    <form action="/login" method="post" class="p-1">
+        <div class="mb-3">
             <label for="username " class="form-label ms-2 fw-bold ">Username</label>
             <input type="text " class="form-control" id="username" name="username" placeholder="Ej. Jperez ">
         </div>
